--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.18",
-    "vue-grid-layout": "^2.4.0"
+    "element-plus": "^2.10.7",
+    "gridstack": "^12.3.3",
+    "uuid": "^11.1.0",
+    "vue": "^3.5.18"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
