--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.10.7",
     "gridstack": "^12.3.3",
+    "lodash-es": "^4.17.21",
+    "quickjs-emscripten": "^0.31.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.18"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@wasm-tool/wasm-pack-plugin": "^1.7.0",
     "vite": "^7.0.6"
   }
 }
