--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "element-plus": "^2.10.7",
     "gridstack": "^12.3.3",
     "lodash-es": "^4.17.21",
+    "markdown-it": "^14.1.0",
+    "markdown-it-task-lists": "^2.1.1",
+    "prismjs": "^1.30.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.18"
   },
