--- a/public/first-config.json
+++ b/public/first-config.json
@@ -1,21 +1,13 @@
 {
-  "globalStyle": ".grid-stack {\n  background-color: unset;\n}\nbody {\n    background: url(https://api.xsot.cn/bing?jump=true);\n    backdrop-filter: blur(10px);\n   -webkit-backdrop-filter: blur(10px);\n}\n.linkItem .el-text {\n    color: #efefef;\n}",
+  "globalStyle": ".grid-stack {\n  background-color: unset;\n}\nbody {\n  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);\n  background-size: 400% 400%;\n  animation: gradientBG 15s ease infinite;\n}\n.linkItem .el-text {\n    color: #efefef;\n}\n\n@keyframes gradientBG {\n  0% { background-position: 0% 50%; }\n  50% { background-position: 100% 50%; }\n  100% { background-position: 0% 50%; }\n}",
   "layout": [
     {
-      "type": "html",
-      "id": "2b8a46b83480-47b9-80ae-e8882101775e",
-      "x": 19,
-      "y": 3,
-      "w": 10,
-      "h": 4
-    },
-    {
       "type": "text",
-      "id": "327b3179-b2c3-4299-95a7-5fcd73710cfd",
+      "id": "abb00c3f9e55-49c5-8771-e56743f9ddad",
       "x": 20,
-      "y": 7,
+      "y": 6,
       "w": 8,
-      "h": 2
+      "h": 3
     },
     {
       "type": "search",
@@ -60,15 +52,9 @@
   ],
   "components": [
     {
-      "id": "2b8a46b83480-47b9-80ae-e8882101775e",
+      "id": "abb00c3f9e55-49c5-8771-e56743f9ddad",
       "style": "height: 100%; width: 100%; position: relative;",
-      "data": "{\"text\":\"<!DOCTYPE html>\\n<html lang=\\\"zh-CN\\\">\\n<head>\\n    <meta charset=\\\"UTF-8\\\">\\n    <meta name=\\\"viewport\\\" content=\\\"width=device-width, initial-scale=1.0\\\">\\n    <title>自适应动态时钟</title>\\n    <style>\\n        * {\\n            margin: 0;\\n            padding: 0;\\n            box-sizing: border-box;\\n        }\\n        \\n        body {\\n            display: flex;\\n            justify-content: center;\\n            align-items: center;\\n            min-height: 100vh;\\n            font-family: 'Arial', sans-serif;\\n            overflow: hidden;\\n        }\\n        \\n        .clock-container {\\n            text-align: center;\\n            padding: 20px;\\n            transition: transform 0.3s ease;\\n        }\\n        \\n        .clock-container:hover {\\n            transform: scale(1.2);\\n        }\\n        \\n        .clock {\\n            font-size: 20vw;\\n            font-weight: bold;\\n            color: #212529;\\n            transition: font-size 0.3s ease;\\n            margin-bottom: 8px;\\n            letter-spacing: -2px;\\n        }\\n        \\n        .date {\\n            font-size: 5vw;\\n            color: #495057;\\n            margin-top: 8px;\\n        }\\n        \\n        /* 小屏幕调整 */\\n        @media (max-width: 768px) {\\n            .clock {\\n                letter-spacing: -1px;\\n            }\\n            \\n            .date {\\n                font-size: 6vw;\\n            }\\n            \\n            .clock-container {\\n                padding: 10px 20px;\\n            }\\n        }\\n    </style>\\n</head>\\n<body>\\n    <div class=\\\"clock-container\\\">\\n        <div id=\\\"clock\\\" class=\\\"clock\\\">00:00:00</div>\\n        <div id=\\\"date\\\" class=\\\"date\\\">0000年00月00日 星期X</div>\\n    </div>\\n\\n    <script>\\n        const clockElement = document.getElementById('clock');\\n        const dateElement = document.getElementById('date');\\n        \\n        // 星期映射\\n        const weekDays = ['日', '一', '二', '三', '四', '五', '六'];\\n        \\n        // 更新时间函数\\n        function updateTime() {\\n            const now = new Date();\\n            \\n            // 获取时间组成部分\\n            const hours = String(now.getHours()).padStart(2, '0');\\n            const minutes = String(now.getMinutes()).padStart(2, '0');\\n            const seconds = String(now.getSeconds()).padStart(2, '0');\\n            \\n            // 获取日期组成部分\\n            const year = now.getFullYear();\\n            const month = String(now.getMonth() + 1).padStart(2, '0');\\n            const day = String(now.getDate()).padStart(2, '0');\\n            const weekDay = weekDays[now.getDay()];\\n            \\n            // 更新时间显示\\n            clockElement.textContent = `${hours}:${minutes}:${seconds}`;\\n            \\n            // 更新日期显示\\n            dateElement.textContent = `${year}年${month}月${day}日 星期${weekDay}`;\\n            \\n            // 使用requestAnimationFrame实现更平滑的动画并减少误差\\n            requestAnimationFrame(updateTime);\\n        }\\n        \\n        // 初始启动\\n        updateTime();\\n    </script>\\n</body>\\n</html>\"}",
-      "type": "html"
-    },
-    {
-      "id": "327b3179-b2c3-4299-95a7-5fcd73710cfd",
-      "style": "height: 100%; width: 100%; position: relative;",
-      "data": "{\"text\":\"<div style=\\\"display: flex;justify-content: center;\\\">\\n<img src='https://uhf.microsoft.com/images/microsoft/RE1Mu3b.png'></img>\\n</div>\"}",
+      "data": "{\"text\":\"<div style=\\\"height:100%;width:100%;display: flex;justify-content: center;align-items: center;\\\">\\n<span class=\\\"typing\\\">一页 · ONE</span>\\n</div>\"}",
       "type": "text"
     },
     {
