--- a/public/first-config.json
+++ b/public/first-config.json
@@ -2,11 +2,19 @@
   "globalStyle": ".grid-stack {\n  background-color: unset;\n}\nbody {\n  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);\n  background-size: 400% 400%;\n  animation: gradientBG 15s ease infinite;\n}\n.linkItem .el-text {\n    color: #efefef;\n}\n\n@keyframes gradientBG {\n  0% { background-position: 0% 50%; }\n  50% { background-position: 100% 50%; }\n  100% { background-position: 0% 50%; }\n}",
   "layout": [
     {
+      "type": "note",
+      "id": "cf4c965843be-4662-b199-d14e172d3e3f",
+      "x": 1,
+      "y": 1,
+      "w": 8,
+      "h": 11
+    },
+    {
       "type": "text",
       "id": "abb00c3f9e55-49c5-8771-e56743f9ddad",
-      "x": 20,
+      "x": 18,
       "y": 6,
-      "w": 8,
+      "w": 12,
       "h": 3
     },
     {
@@ -24,6 +32,14 @@
       "y": 12,
       "w": 4,
       "h": 2
+    },
+    {
+      "type": "note",
+      "id": "8a167c88b0d7-4a63-ad3b-0e02023d0722",
+      "x": 1,
+      "y": 13,
+      "w": 8,
+      "h": 11
     },
     {
       "type": "link",
@@ -52,6 +68,12 @@
   ],
   "components": [
     {
+      "id": "cf4c965843be-4662-b199-d14e172d3e3f",
+      "style": "height: 100%; width: 100%; position: relative;",
+      "data": "{\"text\":\"### 提示\\n\\n#### 操作栏\\n\\n鼠标在窗口左侧贴边纵向滑动即可开启操作栏\\n\\n#### 快捷编辑\\n\\n按住 `CTRL` 即可快速进入编辑模式\\n\\n#### 链接快切\\n\\n1. 鼠标拖拽 __快速链接__ 中的图标，在任意位置释放即可开启单独窗口。\\n2. 点击开启了快切的图标可将窗口拉出。\\n\\n#### 分享模式\\n\\n在地址栏中跟随参数 `?config={configPath}` 即可在进入页面时加载远端配置文件\"}",
+      "type": "note"
+    },
+    {
       "id": "abb00c3f9e55-49c5-8771-e56743f9ddad",
       "style": "height: 100%; width: 100%; position: relative;",
       "data": "{\"text\":\"<div style=\\\"height:100%;width:100%;display: flex;justify-content: center;align-items: center;\\\">\\n<span class=\\\"typing\\\">一页 · ONE</span>\\n</div>\"}",
@@ -68,6 +90,12 @@
       "style": "height: 100%; width: 100%; position: relative;",
       "data": "{\"text\":\"<div style=\\\"height:100%;width:100%;display:flex;align-items: center;justify-content: center;font-weight:bold;/* border-radius: 12px;\\\"><span style=\\\"padding: 4px 16px;background: #ffffff;border-radius: 24px;\\\">这些网站</span></div>\"}",
       "type": "text"
+    },
+    {
+      "id": "8a167c88b0d7-4a63-ad3b-0e02023d0722",
+      "style": "height: 100%; width: 100%; position: relative;",
+      "data": "{\"text\":\"### 贴士\\n\\n#### 放大组件\\n\\n放大组件按钮在 __开启编辑__ 时会显示，点击后可以将组件放大到接近窗口大小。\\n\\n在页面内编辑组件内容时尤为好用。\\n\\n#### 导出组件\\n\\n导出的组件配置可以通过 __添加格子__ 窗口下的输入框中进行导入。\\n\\n非常适合作组件分享。\"}",
+      "type": "note"
     },
     {
       "id": "e7a9413f-370b-4a33-9bfb-05c354b24899",
