--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:test": "vite dev --mode dev"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
