--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
     "@element-plus/icons-vue": "^2.3.2",
     "element-plus": "^2.10.7",
     "gridstack": "^12.3.3",
@@ -21,6 +25,7 @@
     "prismjs": "^1.30.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
+    "vue-codemirror": "^6.1.1",
     "vue-i18n": "^11.1.11"
   },
   "devDependencies": {
