--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "another-homepage",
-  "version": "1.4.2-fiexd",
+  "version": "1.5.0",
   "private": true,
   "type": "module",
   "engines": {
