--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@codemirror/lang-json": "^6.0.2",
     "@element-plus/icons-vue": "^2.3.2",
     "core-js": "^3.45.1",
-    "element-plus": "^2.10.7",
+    "element-plus": "2.11.3",
     "gridstack": "^12.3.3",
     "lodash-es": "^4.17.21",
     "markdown-it": "^14.1.0",
@@ -33,6 +33,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.1.4"
+    "vite": "7.1.5"
   }
 }
