--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "7.1.5"
+    "vite": "7.1.5",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
